[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/UserInterface.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Space.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 1280, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 0 )
}

[node name="Space" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 128

[node name="UserInterface" parent="UI" instance=ExtResource( 1 )]
pause_mode = 2

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 900 )

[node name="SpaceJunkPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="SpawnLocation" type="PathFollow2D" parent="SpaceJunkPath"]

[node name="SpaceJunkTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
[connection signal="timeout" from="SpaceJunkTimer" to="." method="_on_SpaceJunkTimer_timeout"]
